Fix handling of byte count fields

The various byte count fields are all unsigned byte however the incoming
data are loaded in a QByteArray which returns signed char. This patch
fixes this by converting the field value to quint8.

[ChangeLog][Modbus] Fixed handling of packets with payloads longer than
127 bytes.

Task-number: QTBUG-54834
Change-Id: I699c4cf0cea9933bef6c040c573d2d6e6a113920
Reviewed-by: André Hartmann <aha_1980@gmx.de>